--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -59,7 +59,6 @@
                                     icon="fa-print" string="Quotation"/>
 
 
-
                             <button name="action_finised" type="object" class="oe_stat_button" icon="fa-archive">
                                 <field name="finished_stage" widget="boolean_button" string="Finished"
                                        options='{"terminology": {
@@ -112,8 +111,14 @@
                                 <field name="tag_ids" widget="many2many_tags"
                                        options="{'color_field': 'color', 'no_create_edit': True}"/>
                                 <HR></HR>
-                                <tr colspan="2"><field name="budget_resignation"/><th>Renuncia presupuesto</th></tr>
-                                <tr colspan="2"><field name="collect_pieces"/><th>Recoge piezas</th></tr>
+                                <tr colspan="2">
+                                    <field name="budget_resignation"/>
+                                    <th>Renuncia presupuesto</th>
+                                </tr>
+                                <tr colspan="2">
+                                    <field name="collect_pieces"/>
+                                    <th>Recoge piezas</th>
+                                </tr>
                             </group>
 
                         </group>
@@ -212,7 +217,7 @@
                                                'readonly': [('qty_delivered_updateable', '=', False)]}" invisible="1"/>
                                         <field name="qty_invoiced"
                                                attrs="{'column_invisible': [('parent.state', 'not in', ['sale', 'done'])]}"
-                                                invisible="1"/>
+                                               invisible="1"/>
                                         <field name="qty_to_invoice" invisible="1"/>
                                         <field name="product_uom"
                                                attrs="{'readonly': [('state', 'in', ('sale','done', 'cancel'))]}"
@@ -387,7 +392,8 @@
                                 </div>
                                 <div class="oe_kanban_details">
                                     <field name="progress" widget="progressbar"/>
-                                    Entry Date: <field name="date_start" widget="date"/>
+                                    Entry Date:
+                                    <field name="date_start" widget="date"/>
                                     <br/>
 
                                     <strong class="o_kanban_record_title">
@@ -400,15 +406,15 @@
                                     </strong>
 
                                     <small class="o_kanban_record_subtitle text-muted">
-                                    <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
-                                       t-set="red">oe_kanban_text_red
-                                    </t>
-                                    <t t-if="record.date_deadline.raw_value"> Deadline Date:</t>
-                                    <span t-attf-class="#{red || ''}">
-                                        <i>
-                                            <field name="date_deadline"/>
-                                        </i>
-                                    </span>
+                                        <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
+                                           t-set="red">oe_kanban_text_red
+                                        </t>
+                                        <t t-if="record.date_deadline.raw_value">Deadline Date:</t>
+                                        <span t-attf-class="#{red || ''}">
+                                            <i>
+                                                <field name="date_deadline"/>
+                                            </i>
+                                        </span>
                                     </small>
 
                                     <div class="o_kanban_tags_section">
@@ -418,12 +424,12 @@
 
 
                                     <!--<small class="o_kanban_record_subtitle text-muted">-->
-                                        <!--<field name="project_id"-->
-                                               <!--invisible="context.get('default_project_id', False)"/>-->
-                                        <!---->
-                                        <!--<t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"-->
-                                           <!--t-set="red">oe_kanban_text_red-->
-                                        <!--</t>-->
+                                    <!--<field name="project_id"-->
+                                    <!--invisible="context.get('default_project_id', False)"/>-->
+                                    <!---->
+                                    <!--<t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"-->
+                                    <!--t-set="red">oe_kanban_text_red-->
+                                    <!--</t>-->
                                     <!--</small>-->
                                     <div class="o_kanban_record_bottom">
                                         <div class="oe_kanban_bottom_left">
@@ -503,6 +509,23 @@
                 </tree>
             </field>
         </record>
+
+
+        <record id="action_car_all_ro_menu" model="ir.actions.act_window">
+            <field name="name">All Repairs Orders</field>
+            <field name="res_model">car_workshop.repair</field>
+            <field name="view_mode">tree,form,calendar,kanban</field>
+            <field name="context">{
+                'group_by': 'stage_id',
+                'search_default_in_work': 1,
+                }
+            </field>
+        </record>
+
+        <!--All Repair Orders Menu-->
+        <menuitem id="car_all_ro_menu" name=" Todas las Reparaciones"
+                  parent="main_car_ro_menu" action="action_car_all_ro_menu"
+                  sequence="2"/>
 
     </data>
 </odoo>
