--- a/sdi_basic_account_and_inventory/views/basic_purchases.xml
+++ b/sdi_basic_account_and_inventory/views/basic_purchases.xml
@@ -10,6 +10,13 @@
             <field name="view_mode">tree,form</field>
         </record>
 
+        <record id="action_sdi_basic_pending_purchases_inv" model="ir.actions.act_window">
+            <field name="name">Facturas de Compra Pendientes (de Pago)</field>
+            <field name="res_model">account.invoice</field>
+            <field name="view_mode">tree,kanban,form,calendar,pivot,graph</field>
+            <field name="context">{'default_type': 'in_invoice', 'type': 'in_invoice', 'journal_type': 'purchase'}</field>
+            <field name="domain">[('state','!=','paid'),('type','=','in_invoice')]</field>
+        </record>
 
         <menuitem id="sdi_basic_purchases_menu" name="Compras"
                   parent="sdi_basic_vc_acc_menus"
@@ -17,12 +24,8 @@
         <menuitem id="sdi_basic_purchase_or_menu" name="Presupuestos/Pedidos de Compra"
                   parent="sdi_basic_purchases_menu" action="action_sdi_basic_purchases"
                   sequence="1"/>
-        <menuitem id="sdi_basic_purchase_inv_menu" name="Facturas de Compras Pendientes"
-                  parent="sdi_basic_purchases_menu" action="purchase.action_invoice_pending"
+        <menuitem id="sdi_basic_purchase_inv_menu" name="Facturas de Compra Pendientes"
+                  parent="sdi_basic_purchases_menu" action="action_sdi_basic_pending_purchases_inv"
                   sequence="2"/>
-        <menuitem id="sdi_basic_supplier_menu" name="Proveedores"
-                  parent="sdi_basic_purchases_menu" action="base.action_partner_supplier_form"
-                  sequence="3"/>
-
     </data>
 </odoo>
