--- a/sdi_basic_account_and_inventory/views/basic_sales.xml
+++ b/sdi_basic_account_and_inventory/views/basic_sales.xml
@@ -4,19 +4,60 @@
 
         <!--Ventas-->
 
-        <record id="action_sdi_basic_pending_sales_inv" model="ir.actions.act_window">
-            <field name="name">Facturas de Compra Pendientes (de Cobro)</field>
+        <record id="view_account_invoice_filter" model="ir.ui.view">
+            <field name="name">search.view.account.invoice</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+            <field name="arch" type="xml">
+
+                <xpath expr="//field[@name='date']" position="after">
+                    <filter name="pending_sales_inv" string="Pendientes de Cobro"
+                           domain="[('state','!=','paid')]"/>
+                    <filter name="pending_purchases_inv" string="Pendientes de Pago"
+                           domain="[('state','!=','paid')]"/>
+                </xpath>
+
+                <!--Es necesario poner aquí el filtro pending_purchases_inv, en vez del -->
+                <!--fichero basic_purchases porque sino este ultimo sobreescribiria este record.-->
+
+            </field>
+        </record>
+
+
+        <record id="action_sdi_basic_pending_sales_invv" model="ir.actions.act_window">
+            <field name="name">Facturas de Venta</field>
             <field name="res_model">account.invoice</field>
             <field name="view_mode">tree,kanban,form,calendar,pivot,graph</field>
-            <field name="context">{'type':'out_invoice', 'journal_type': 'sale'}</field>
-            <field name="domain">[('state','!=','paid'),('type','=','in_invoice')]</field>
+            <field name="context">{
+                    'search_default_pending_sales_inv':1
+                }</field>
+            <field name="domain">[('type','=','out_invoice')]</field>
         </record>
+
+
+
+        <record id="action_sdi_basic_pending_sales_invv_view1" model="ir.actions.act_window.view">
+            <field eval="1" name="sequence"/>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="account.invoice_tree"/>
+            <field name="act_window_id" ref="action_sdi_basic_pending_sales_invv"/>
+        </record>
+
+        <record id="action_sdi_basic_pending_sales_invv_view2" model="ir.actions.act_window.view">
+            <field eval="2" name="sequence"/>
+            <field name="view_mode">form</field>
+            <field name="view_id" ref="account.invoice_form"/>
+            <field name="act_window_id" ref="action_sdi_basic_pending_sales_invv"/>
+        </record>
+
+
+
 
         <menuitem id="sdi_basic_sales_menu" name="Ventas"
                   parent="sdi_basic_vc_acc_menus"
                   sequence="1"/>
         <menuitem id="sdi_basic_sales_inv_menu" name="Facturas de Venta Pendientes"
-                  parent="sdi_basic_sales_menu" action="action_sdi_basic_pending_sales_inv"
+                  parent="sdi_basic_sales_menu" action="action_sdi_basic_pending_sales_invv"
                   sequence="1"/>
 
     </data>
