--- a/car_workshop/report/cw_admission_sheet_templates.xml
+++ b/car_workshop/report/cw_admission_sheet_templates.xml
@@ -9,10 +9,10 @@
                 <t t-call="web.external_layout">
                     <div class="page">
                         <!--Estilos-->
-                        <t t-call="car-workshop.cw_report_style"/>
+                        <t t-call="car_workshop.cw_report_style"/>
                         <!--HEAD cw_head_templates.xml-->
                         <!--INI CABECERA-->
-                        <t t-call="car-workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
+                        <t t-call="car_workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
                         <!--FIN CABECERA-->
                         <br/>
                         <br/>
@@ -134,7 +134,7 @@
     <template id="report_admission_sheet">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
-                <t t-call="car-workshop.report_admission_sheet_document" t-lang="doc.partner_id.lang"/>
+                <t t-call="car_workshop.report_admission_sheet_document" t-lang="doc.partner_id.lang"/>
             </t>
         </t>
     </template>
