--- a/car_workshop/report/cw_invoice_templates.xml
+++ b/car_workshop/report/cw_invoice_templates.xml
@@ -8,10 +8,10 @@
                 <t t-set="o" t-value="o.with_context({'lang':o.partner_id.lang})"/>
                 <div class="page">
                         <!--Estilos-->
-                        <t t-call="car-workshop.cw_report_style"/>
+                        <t t-call="car_workshop.cw_report_style"/>
                         <!--HEAD cw_head_templates.xml-->
                         <!--INI CABECERA-->
-                        <t t-call="car-workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
+                        <t t-call="car_workshop.report_head_vehicle_customer" t-lang="doc.partner_id.lang"/>
                         <!--FIN CABECERA-->
                         <br/>
                     <h2>
@@ -147,7 +147,7 @@
     <template id="cw_report_invoice">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
-                <t t-call="car-workshop.cw_report_invoice_document" t-lang="doc.partner_id.lang"/>
+                <t t-call="car_workshop.cw_report_invoice_document" t-lang="doc.partner_id.lang"/>
             </t>
         </t>
     </template>
