--- a/car_workshop/report/cw_reports.xml
+++ b/car_workshop/report/cw_reports.xml
@@ -6,8 +6,8 @@
             string="Admission Sheet"
             model="car_workshop.repair"
             report_type="qweb-html"
-            file="car-workshop.report_admission_sheet"
-            name="car-workshop.report_admission_sheet"
+            file="car_workshop.report_admission_sheet"
+            name="car_workshop.report_admission_sheet"
             print_report_name="'Hoja de Admisión - %s' % (object.name)"
         />
         <report
@@ -15,8 +15,8 @@
             string="Quotation"
             model="car_workshop.repair"
             report_type="qweb-html"
-            file="car-workshop.report_quotation"
-            name="car-workshop.report_quotation"
+            file="car_workshop.report_quotation"
+            name="car_workshop.report_quotation"
             print_report_name="'Presupuesto - %s' % (object.name)"
         />
         <report
@@ -24,8 +24,8 @@
             string="Factura Taller"
             model="account.invoice"
             report_type="qweb-html"
-            file="car-workshop.cw_report_invoice"
-            name="car-workshop.cw_report_invoice"
+            file="car_workshop.cw_report_invoice"
+            name="car_workshop.cw_report_invoice"
             print_report_name="'Factura - %s' % (object.name)"
         />
     </data>
