--- a/car_workshop/views/inherit_res_config_settings.xml
+++ b/car_workshop/views/inherit_res_config_settings.xml
@@ -3,13 +3,13 @@
     <data>
 
        <record id="res_config_settings_view_form" model="ir.ui.view">
-        <field name="name">res.config.settings.view.form.inherit.car-workshop</field>
+        <field name="name">res.config.settings.view.form.inherit.car_workshop</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="5"/>
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[hasclass('settings')]" position="inside">
-                <div class="app_settings_block" data-string="Car Workshop" string="Car Workshop" data-key="car-workshop">
+                <div class="app_settings_block" data-string="Car Workshop" string="Car Workshop" data-key="car_workshop">
                     <h2>Areas</h2>
                     <div class="row mt16 o_settings_container">
                         <div class="col-xs-12 col-md-6 o_setting_box">
@@ -72,7 +72,7 @@
         </record>
 
         <!--Action Settings Menu-->
-        <record id="car-workshop_config_settings_action" model="ir.actions.act_window">
+        <record id="car_workshop_config_settings_action" model="ir.actions.act_window">
             <field name="name">Settings</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.config.settings</field>
@@ -85,7 +85,7 @@
         <!--Settings Menu-->
         <menuitem id="car_settings_menu" name="Settings"
                   parent="car_vconfig_menus"
-                  sequence="1" action="car-workshop_config_settings_action" groups="base.group_system"/>
+                  sequence="1" action="car_workshop_config_settings_action" groups="base.group_system"/>
 
     </data>
 </odoo>
