--- a/car_workshop/views/inherit_res_partner.xml
+++ b/car_workshop/views/inherit_res_partner.xml
@@ -10,8 +10,8 @@
             <field name="view_type">form</field>
             <field name="view_ids"
                    eval="[(5, 0, 0),
-                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_fleet_vehicle_view_kanban')}),
-                          (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_fleet_vehicle_view_form')})]"
+                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car_workshop_fleet_vehicle_view_kanban')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('car_workshop_fleet_vehicle_view_form')})]"
             />
             <field name="target">current</field>
         </record>
@@ -24,9 +24,9 @@
             <field name="view_type">form</field>
             <field name="view_ids"
                    eval="[(5, 0, 0),
-                          (0, 0, {'view_mode': 'tree', 'view_id': ref('car-workshop_repair_view_tree')}),
-                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car-workshop_repair_view_kanban')}),
-                          (0, 0, {'view_mode': 'form', 'view_id': ref('car-workshop_repair_view_form')})]"
+                          (0, 0, {'view_mode': 'tree', 'view_id': ref('car_workshop_repair_view_tree')}),
+                          (0, 0, {'view_mode': 'kanban', 'view_id': ref('car_workshop_repair_view_kanban')}),
+                          (0, 0, {'view_mode': 'form', 'view_id': ref('car_workshop_repair_view_form')})]"
             />
             <field name="target">current</field>
         </record>
@@ -38,7 +38,7 @@
             <field name="arch" type="xml">
                 <xpath expr='//div[@name="button_box"]' position='inside'>
                     <button class="oe_stat_button" type="action" icon="fa-car"
-                        name="%(car-workshop.partner_vehicles)d"
+                        name="%(car_workshop.partner_vehicles)d"
                         help="Vehicles related with this contact"
                         attrs="{'invisible': [('customer', '=', False)]}">
                         <field string="Vehicles" name="vehicles_count" widget="statinfo"/>
@@ -46,7 +46,7 @@
                 </xpath>
                 <xpath expr='//div[@name="button_box"]' position='inside'>
                     <button class="oe_stat_button" type="action" icon="fa-wrench"
-                        name="%(car-workshop.partner_repairs)d"
+                        name="%(car_workshop.partner_repairs)d"
                         help="Repairs related with this contact"
                         attrs="{'invisible': [('customer', '=', False)]}">
                         <field string="Repairs" name="repairs_count" widget="statinfo"/>
