--- a/car_workshop/views/inherit_res_config_settings.xml
+++ b/car_workshop/views/inherit_res_config_settings.xml
@@ -64,6 +64,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xs-12 col-md-6 o_setting_box">
+                            <div class="o_setting_left_pane">
+                                <field name="module_separate_project_and_car_workshop"/>
+                            </div>
+                            <div class="o_setting_right_pane">
+                                <label for="module_separate_project_and_car_workshop"/>
+                                <div class="text-muted">
+                                    Check this for install SDi Contabilidad e Inventario Básico.
+                                    This module will add a new menu with accounting and billing functionality.
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
