--- a/car_workshop/views/inherit_fleet_vehicle.xml
+++ b/car_workshop/views/inherit_fleet_vehicle.xml
@@ -44,11 +44,11 @@
                         <div class="oe_title">
                             <label for="model_id" class="oe_edit_only"/>
                             <h1>
-                                <field name="model_id" placeholder="e.g. Model S"/>
+                                <field name="model_id" placeholder="e.j. Model S"/>
                             </h1>
                             <label for="license_plate" class="oe_edit_only"/>
                             <h2>
-                                <field name="license_plate" class="oe_inline" placeholder="e.g. PAE 326"/>
+                                <field name="license_plate" class="oe_inline" placeholder="e.j. PAE 326"/>
                             </h2>
                             <label for="tag_ids" class="oe_edit_only"/>
                             <field name="tag_ids" widget="many2many_tags"
@@ -58,11 +58,9 @@
                             <group>
                                 <field name="customer_id" domain="[('customer','=',1)]"
                                        context="{'search_default_customer':1}"/>
-
-
                                 <field name="location"/>
                                 <field name="vin_sn"/>
-                                <field name="model_year"/>
+                                <field name="model_year" string="Year of the vehicle"/>
                                 <field name="company_id" groups="base.group_multi_company"/>
                                 <field name="driver_id"/>
                             </group>
@@ -91,12 +89,13 @@
                                     <field name="co2"/>
                                     <span>g/km</span>
                                 </div>
-                                <field name="horsepower"/>
                                 <field name="horsepower_tax"/>
                                 <label for="power"/>
                                 <div class="o_row">
                                     <field name="power"/>
                                     <span>kW</span>
+                                    <field name="horsepower"/>
+                                    <span>cV</span>
                                 </div>
                             </group>
                         </group>
