--- a/car_workshop/report/cw_invoice_templates.xml
+++ b/car_workshop/report/cw_invoice_templates.xml
@@ -31,14 +31,6 @@
                             <strong>Fecha de vencimiento:</strong>
                             <p t-field="o.date_due"/>
                         </div>
-                        <div class="col-xs-2" t-if="o.origin">
-                            <strong>Presupuesto Origen:</strong>
-                            <p t-field="o.origin"/>
-                        </div>
-                        <div class="col-xs-2" t-if="o.partner_id.ref">
-                            <strong>Ref. de Cliente:</strong>
-                            <p t-field="o.partner_id.ref"/>
-                        </div>
                     </div>
                     <!-- Is there a discount on at least one line? -->
                     <t t-set="display_discount" t-value="any([l.discount for l in o.invoice_line_ids])"/>
@@ -51,8 +43,7 @@
                                 <th class="text-right">Cantidad</th>
                                 <th class="text-right">Precio Unidad</th>
                                 <th t-if="display_discount" class="text-right">Disc.(%)</th>
-                                <th class="text-right">Impuestos</th>
-                                <th class="text-right">Total</th>
+                                <th class="text-right">Subtotal</th>
                             </tr>
                         </thead>
                         <tbody class="invoice_tbody">
@@ -69,9 +60,6 @@
                                 <td t-if="display_discount" class="text-right">
                                     <span t-field="l.discount"/>
                                 </td>
-                                <td class="text-right">
-                                    <span t-esc="', '.join(map(lambda x: (x.description or x.name), l.invoice_line_tax_ids))"/>
-                                </td>
                                 <td class="text-right" id="subtotal">
                                     <span t-field="l.price_subtotal"
                                         t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
@@ -83,7 +71,6 @@
                                 <td></td>
                                 <td></td>
                                 <td t-if="display_discount"></td>
-                                <td></td>
                                 <td></td>
                             </tr>
                         </tbody>
